--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -2,19 +2,78 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  user-select: none;
 }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.fb2-book {
+  height: 100%;
+  width: 100%;
+  font-size: 16px;
+  column-count: 2;
+  column-gap: 50px;
+  column-axis: horizont;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+@media (max-width: 1400px) {
+  .fb2-book {
+    column-count: 1;
+    column-gap: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+}
+
+.fb2-book img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.fb2-book__title {
+  position: relative;
+
+  width: 650px;
+  height: 52px;
+  margin: 15px auto 0;
+
+  text-align: center;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+
+  color: #999;
+}
+
+.fb2-book__cover {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.fb2-book .wrapper,
+.fb2-book section {
+  page-break-inside: avoid;
+}
+
+.fb2-book h1 {
+  display: block;
+  font-size: 2.2em;
+  -webkit-margin-before: 1.34em;
+  -webkit-margin-before: 0.67em;
+  font-weight: normal;
 }
